List with scrolling message cards right swipe deletes message ugly timestamp

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MessageApplication</string>
+    <string name="app_name">Messages</string>
+    <string name="tryAgain">Please check your internet connection. Tap here to try again</string>
 </resources>
